docs(repo): 清理规划文档并完善 GitHub 仓库基础设施
## 变更
- 清理不应进入仓库的任务规划文档，并补齐 docs 目录说明
- 同步 README、架构文档、特性文档与当前代码实现
- 新增 LICENSE、贡献指南、行为准则、支持说明、Issue/PR 模板、CI 与 Dependabot 配置
- 修复 Linux CI 下的权限路径归一化与 ProcessBooter 兼容性问题

## 验证
- mvn test
- GitHub Actions: Backend Test
- GitHub Actions: Frontend Test and Build